@@ -9,6 +9,8 @@
     ADDED: option: Panel > Operation > Unselect files before copy/move
     ADDED: support for xz archives
 
+    CHANGED: quickfilter follows case sensivity setting of quicksearch
+    CHANGED: quickfilter expands wildcards
     CHANGED: duplicate tab / open in new tab:
              create the new tab next to the current one.
     CHANGED: filter settings are saved/restored individually for each tab.
